[package]
name = "ethertia"
version = "0.1.0"
edition = "2021"
authors = ["dreamtowards"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"


# enet = "0.3.0"

# system

winit = "0.29.2"

native-dialog = "0.6.4"
sysinfo = "0.29.10"
memory-stats = "1.1.0"
# notify = "6.1.1"  # filewatch

log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"

byte-unit = "4.0.19"




# serde = "1.0.0"

# physx = "0.19.0"

# math
# glam, vek

# controller
# gilrs = "0.10.0"