[package]
name = "ethertia"
version = "0.1.0"
edition = "2021"
authors = ["dreamtowards"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wgpu = "0.17.1"
winit = { version = "0.29.2", features = ["rwh_05"] }

# enet = "0.3.0"

vek = "0.16.1"
glam = "0.24.2"


native-dialog = "0.6.4"
sysinfo = "0.29.10"
memory-stats = "1.1.0"
# notify = "6.1.1"  # filewatch

log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"
byte-unit = "4.0.19"
pollster = "0.3.0"  # block_on async
bytemuck = { version = "1.12", features = [ "derive" ] }  # bytemuck::cast_slice to &[u8]
anyhow = "1.0.75"

image = { version = "0.24.7", features = ["png", "jpeg"] }


# serde = "1.0.0"

# physx = "0.19.0"

# math
# glam, vek

# controller
# gilrs = "0.10.0"

